# relleneitor

./: .cursorrules  README.md  pyproject.toml  requirements.txt
documentation_cursor/: project_overview.md
examples/: articulos_pedidos.py  hospital_mariadb.py  hospital_mariadb_custom.py  hostipal_schema.py  proveedores_shema.py  proveedores_shema_save_file.py  sistema_ventas_schema.py  telefono_proveedor_schema.py
src/: database.py  generator.py  schema.py  test_utils.py  utils.py
tests/: README.md  conftest.py  test_foreign_keys.py  test_sql_generator.py
