[project]
name = "relleneitor"
version = "0.1.0"
description = "Generador de datos sintéticos para bases de datos"
authors = [
    {name = "Kedap", email = "kedap@example.com"},
]
dependencies = [
    "faker>=19.0.0",
    "mariadb>=1.1.0",
]
requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"] 